# world-models

./: .gitignore  .gitmodules  .vim-arsync  CMakeLists.txt  README.md  requirements.txt  run.py  setup.py  train.py
ditto/: config.yaml  ditto.py  process_expert_data.py
dreamer/: __init__.py  agent.py  config.yaml  distributions.py  driver.py  logger.py  models.py  run.py  storage.py  train.py  utils.py  visualizer.py
dreamer/common/: driver.py  logger.py  models.py  processing.py  utils.py
dreamer/raisim_gym/: __init__.py
dreamer/raisim_gym/include/: Environment.hpp
dreamer/raisim_gym/src/: raisim_gym.cpp
env/: __init__.py
env/gym_envs/world_model/: Utility.hpp
env/raisim_gym_torch/env/: RaisimGymVecEnv.py  Reward.hpp
scripts/: ditto.py  replay_expert_data.py  run.py  train_dreamer.py  wm_validation.py
scripts/helpers/: generate_gym_data.py  train_gym_policy.py  wm_validation.py
tests/: config.yaml  test_agent.py  test_ensemble.py  test_models.py  test_normaliser.py  test_replay.py  test_storage.py  test_world_model.py
world_models/: agent.py  config.yaml  ditto.py  dreamer.py  run.py  train.py
world_models/common/: __init__.py  distributions.py  driver.py  logger.py  models.py  processing.py  storage.py  utils.py  visualizer.py  world_model.py
world_models/ditto/: ditto.py
world_models/env/: Environment.hpp  __init__.py
world_models/env/gym_envs/world_models/: Environment.hpp
world_models/env/raisim_gym/: VectorizedEnvironment.hpp  raisim_gym.cpp
world_models/expert_data/: calculate_height.py  generate_init_data.py  process_expert_data.py
world_models/expert_data/pos_error_cmds/: expert.npy
world_models/raisim_gym/: Environment.hpp
world_models/raisim_gym/helpers/: Utility.hpp  Visualization.hpp
world_models/raisim_gym/raisim_gym/: RaisimGymVecEnv.py  VectorizedEnvironment.hpp  debug_app.cpp  raisim_gym.cpp
world_models/tests/: test_models.py  test_rssm.py
